@@ -1624,9 +1624,12 @@ endif
 	else \
 	  ln -sfv $(STAGE1_BOOT_RUNTIME) $(STAGE1_BOOT_DIR)/lib/tools.jar ; \
 	fi
-# Workaround some older ppc64le builds installing to 'ppc64' rather than 'ppc64le'
+# Workaround some older ppc64le builds installing to 'ppc64' or 'ppc64el' rather than 'ppc64le'
 	if test -d $(SYSTEM_JDK_DIR)/jre/lib/ppc64 ; then \
 	  ln -sfv $(SYSTEM_JDK_DIR)/jre/lib/ppc64 \
+	    $(STAGE1_BOOT_DIR)/jre/lib/$(JRE_ARCH_DIR) ; \
+	elif test -d $(SYSTEM_JDK_DIR)/jre/lib/ppc64el ; then \
+	  ln -sfv $(SYSTEM_JDK_DIR)/jre/lib/ppc64el \
 	    $(STAGE1_BOOT_DIR)/jre/lib/$(JRE_ARCH_DIR) ; \
 	else \
 	  ln -sfv $(SYSTEM_JDK_DIR)/jre/lib/$(JRE_ARCH_DIR) \
